# anchoral

./: .gitignore  .gitmodules  README.md  makefile  pyproject.toml
conf/: conf.yaml
conf/callbacks/: early_stopping.yaml  grad_norm.yaml  model_checkpoint.yaml  pytorch_profiler.yaml  save_outputs.yaml  timer.yaml
conf/dataset/: agnews.yaml  agnews_business.yaml  agnews_original.yaml  amazon.yaml  amazon_agri.yaml  amazon_multi.yaml  dbpedia_14.yaml  dbpedia_classes.yaml  eurlex.yaml  imdb.yaml  pubmed.yaml  pubmed_20k_rct.yaml  wiki_toxic.yaml  wikitoxic.yaml
conf/experiment/: basic.yaml  debug.yaml  full_data.yaml
conf/experiments/: baselines.yaml  basic.yaml  convergence.yaml  dataset_reuse.yaml  debug.yaml  full_data.yaml  submit.yaml
conf/launcher/: joblib.yaml  slurm.yaml  submit.yaml
conf/loggers/: tensorboard.yaml
conf/strategy/: _oldanchoral_leastconf.yaml  _simpleanchoral_leastconf.yaml  anchoral.yaml  anchoral2.yaml  anchoral_badge.yaml  anchoral_entropy.yaml  anchoral_ftbertkm.yaml  anchoral_leastconf.yaml  anchors.yaml  anchorswithperclasssampling.yaml  anchorswithsampling.yaml  badge.yaml  default.yaml  default_anchoral.yaml  default_search.yaml  default_subset.yaml  defaults.yaml  defaults_anchoral.yaml  defaults_seals.yaml  dissimilarity.yaml  entropy.yaml  ftbertkm.yaml  fullguide.yaml  fullguidewithsampling.yaml  gradnormguide.yaml  gradnormguidewithsampling.yaml  igal.yaml  igal_random.yaml  leastconf.yaml  multiclassanchoral_leastconf.yaml  oldanchoral_leastconf.yaml  random.yaml  randomguide.yaml  randomguidewithsampling.yaml  randomsubset.yaml  randomsubset_badge.yaml  randomsubset_entropy.yaml  randomsubset_ftbertkm.yaml  randomsubset_leastconf.yaml  seals.yaml  (+13 more)
examples/: active_estimators.ipynb  create_data.ipynb  datastores.ipynb  estimators.ipynb  hessian_computation.ipynb  per_example_gradients.ipynb  second_order_grad_tutorial.ipynb
notebooks/: 01_check_runs.ipynb  02_data_statistics.ipynb  03_export_experiments.ipynb  04_analysis.ipynb  ablation_analysis.ipynb  agnews.ipynb  amazon.ipynb  analysis copy.ipynb  analysis.ipynb  analysis_experiment.ipynb  civil_comments.ipynb  data_statistics.ipynb  datastores.ipynb  hessian_computation.ipynb  jigsaw.ipynb  learning_curves.ipynb  per_example_gradients.ipynb  probs.ipynb  projections.ipynb  results copy.ipynb  results.ipynb  scratch.ipynb  set_similarity.ipynb  test.ipynb
notebooks/_to_check/: agnews.ipynb  amazon.ipynb  analysis copy.ipynb  analysis.ipynb  analysis_experiment.ipynb  civil_comments.ipynb  data_statistics.ipynb  datastores.ipynb  hessian_computation.ipynb  learning_curves.ipynb  per_example_gradients.ipynb  second_order_grad_tutorial.ipynb  set_similarity.ipynb  test.ipynb
scripts/: active_fit.py  active_train.py  create_data.py  create_index.py  download_data_from_hub.py  embed_data.py  eurlex_process.py  export_results.py  extract_tensorboard.py  load_data_from_hub.py  prepare_data.py  process_agnews.py  process_civil_comments.py  process_data.py  process_imdb.py  pubmed_process.py  test_index_recall.py  train.py
src/: _scratchpad.py  _strategies.py  anchoral.py  callbacks.py  containers.py  data.py  datamodule.py  enums.py  estimator.py  estimators.py  logging.py  progress_trackers.py  registries.py  strategies.py  trainer.py  transformers.py  types.py  utilities.py
src/active_learning/: base.py  callbacks.py  data.py  estimators.py  strategies.py
src/data/: active_datamodule.py  datamodule.py  transformers.py
src/energizer/: callbacks.py  containers.py  data.py  datamodule.py  enums.py  estimator.py  logging.py  progress_trackers.py  types.py
src/energizer/active_learning/: active_estimator.py  base.py  callbacks.py  data.py  progress_trackers.py  strategies.py
src/energizer/callbacks/: __init__.py  base.py  early_stopping.py  model_checkpoint.py  timer.py
src/energizer/utilities/: __init__.py  model_summary.py
src/estimators/: classification.py  estimator.py
src/huggingface/: callbacks.py  datamodule.py  estimators.py
src/query_strategies/: active_estimator.py  base.py  classification.py
src/utilities/: model_summary.py
