[tool.poetry]
name = "anchoral"
version = "0.2.0"
description = "AnchorAL: Anchored Active Learning for Large Imbalanced Datasets"
authors = ["Pietro Lesci <pietrolesci@outlook.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{ include = "src" },]


[tool.poetry.dependencies]
python = ">=3.9,<3.10"
energizer = { path = "./energizer/", develop = true}

# lightning
torch = {url = "https://download.pytorch.org/whl/cu118/torch-2.0.0%2Bcu118-cp39-cp39-linux_x86_64.whl", platform = "linux", python = ">=3.9 <3.10"}
lightning = { git = "https://github.com/Lightning-AI/lightning.git" }
torchmetrics = "^1.0.1"
# einops = "^0.6.1"
# https://github.com/python-poetry/poetry/issues/6409#issuecomment-1572612891
# torchvision = {url = "https://download.pytorch.org/whl/cu118/torchvision-0.15.0%2Bcu118-cp39-cp39-linux_x86_64.whl", platform = "linux", python = ">=3.9 <3.10"}

# hydra
omegaconf = "^2.3.0"
hydra-core = "^1.3.2"
hydra-colorlog = "^1.2.0"
hydra-joblib-launcher = "^1.2.0"
hydra-submitit-launcher = "^1.2.0"
colorlog = "^6.7.0"

# plots
matplotlib = "^3.6.3"
seaborn = "^0.12.2"
tabulate = "^0.9.0"
altair = "^5.0.1"

# analysis
openpyxl = "^3.1.1"
tbparse = "^0.0.7"
polars = "^0.18.2"
duckdb = "^0.8.1"
ipykernel = "^6.20.2"
ipywidgets = "7.7.1"

# dev
black = "^22.12.0"
nbqa = "^1.6.1"
isort = "^5.11.4"
nvitop = "^1.0.0"


[tool.black]
line-length = 120
skip-string-normalization = false
target-version = ['py39']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''


[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
skip_gitignore = true


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
