[build-system]
requires      = [ "poetry-core" ]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name        = "anchoral"
version     = "0.2.0"
description = "AnchorAL: Anchored Active Learning for Large and Imbalanced Datasets"
authors     = [ "Pietro Lesci <pietrolesci@outlook.com>" ]
license     = "Apache-2.0"
readme      = "README.md"
packages    = [ { include = "src" } ]


[tool.poetry.dependencies]
python    = ">=3.9,<3.10"
energizer = { path = "./energizer/", develop = true }

# lightning
# https://github.com/python-poetry/poetry/issues/6409#issuecomment-1572612891
torch = { url = "https://download.pytorch.org/whl/cu118/torch-2.0.0%2Bcu118-cp39-cp39-linux_x86_64.whl", platform = "linux", python = ">=3.9 <3.10" }
# need this because sentence-transformers installs torchvision with CUDA 11.7
torchvision           = { url = "https://download.pytorch.org/whl/cu118/torchvision-0.15.0%2Bcu118-cp39-cp39-linux_x86_64.whl", platform = "linux", python = ">=3.9 <3.10" }
torchmetrics          = { git = "https://github.com/Lightning-AI/torchmetrics.git" }
lightning             = "^2.0.8"
sentence-transformers = "^2.2.2"

# hydra
omegaconf               = "^2.3.0"
hydra-core              = "^1.3.2"
hydra-colorlog          = "^1.2.0"
hydra-joblib-launcher   = "^1.2.0"
hydra-submitit-launcher = "^1.2.0"
colorlog                = "^6.7.0"

# plots
matplotlib = "^3.6.3"
seaborn    = "^0.12.2"
altair     = "^5.0.1"

# analysis
openpyxl   = "^3.1.1"
polars     = "^0.18.2"
duckdb     = "^0.10.1"
ipykernel  = "^6.20.2"
ipywidgets = "7.7.1"

# dev
nvitop = "^1.0.0"
ruff   = "^0.3.5"
plotnine = "^0.13.4"


[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
".bzr",
".direnv",
".eggs",
".git",
".git-rewrite",
".hg",
".mypy_cache",
".nox",
".pants.d",
".pytype",
".ruff_cache",
".svn",
".tox",
".venv",
"__pypackages__",
"_build",
"buck-out",
"build",
"dist",
"node_modules",
"venv",
]

extend-include = [ "*.ipynb" ]

# Same as Black.
line-length = 120

target-version = "py39"


[tool.ruff.format]
quote-style               = "double"
indent-style              = "space"
skip-magic-trailing-comma = true


[tool.ruff.lint]
select = [
# pycodestyle
"E",
# Pyflakes
"F",
# pyupgrade
"UP",
# flake8-bugbear
"B",
# flake8-simplify
"SIM",
# isort
"I",
]

ignore = [
# # Use `X | Y` for type annotations
# "UP007",
# # Logging statement uses f-string
# "G004",
# # Function definitions that include too many arguments (>5)
# "PLR0913",
# # Comparison to `True` should be `cond is True` or `if cond:`
# "E712",
# # blanket-type-ignore
# "PGH003",
# flake8 Indentation contains tabs (W191)
"W191",
]


# # Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
# # select = ["E", "F"]
# select = [
# # pyflakes
# "F",
# # pycodestyle
# "E",
# "W",
# # flake8-2020
# "YTT",
# # flake8-bugbear
# "B",
# # flake8-quotes
# "Q",
# # flake8-debugger
# "T10",
# # flake8-gettext
# "INT",
# # pylint
# "PL",
# # misc lints
# "PIE",
# # flake8-pyi
# "PYI",
# # tidy imports
# "TID",
# # implicit string concatenation
# "ISC",
# # type-checking imports
# "TCH",
# # comprehensions
# "C4",
# # pygrep-hooks
# "PGH",
# # Ruff-specific rules
# "RUF",
# # flake8-bandit: exec-builtin
# "S102",
# # numpy-legacy-random
# "NPY002",
# # Perflint
# "PERF",
# # flynt
# "FLY",
# # flake8-logging-format
# "G",
# ]


# Allow autofix for all enabled rules (when `--fix`) is provided.
# fix = true
# fixable = ["A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W", "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "EM", "ERA", "EXE", "FBT", "ICN", "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "TRY", "UP", "YTT"]
# unfixable = [  ]


[tool.ruff.lint.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10


[tool.ruff.lint.isort]
combine-as-imports      = true
split-on-trailing-comma = false
